--- a/VelaAngel-ExamenProgreso/Views/Shared/_Layout.cshtml
+++ b/VelaAngel-ExamenProgreso/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AVelas" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AVelas" asp-action="Index">Avela</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Celulars" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Celulars" asp-action="Index">Celular</a>
                         </li>
                     </ul>
                 </div>
