--- a/VelaAngel-ExamenProgreso/Views/Home/Index.cshtml
+++ b/VelaAngel-ExamenProgreso/Views/Home/Index.cshtml
@@ -7,5 +7,12 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-    <img src="../wwwroot/images.jpg" alt="Sample Photo" />
+    <img src="../wwwroot/meme.jpg" alt="Sample Photo" class="imagen"/>
+
+<div>
+    <button name="button">Click</button>
+
+</div>
+
+
 
